--- a/app/src/main/res/layout/each_task.xml
+++ b/app/src/main/res/layout/each_task.xml
@@ -17,7 +17,7 @@
             android:layout_height="match_parent">
 
             <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/materialCheckBox"
+                android:id="@+id/mCheckBox"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:buttonTint="@color/light_accent"
@@ -35,8 +35,8 @@
                 android:layout_marginStart="40dp"
                 android:text="31-3-2024"
                 android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="@+id/materialCheckBox"
-                app:layout_constraintTop_toBottomOf="@+id/materialCheckBox" />
+                app:layout_constraintStart_toStartOf="@+id/mCheckBox"
+                app:layout_constraintTop_toBottomOf="@+id/mCheckBox" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
