--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -275,7 +275,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="75dp"
             android:layout_marginBottom="40dp"
-            android:backgroundTint="?attr/colorOutline"
+            android:backgroundTint="?attr/colorOutlineVariant"
             android:stateListAnimator="@null"
             android:text="CANCEL"
             app:cornerRadius="7dp"
