--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -33,7 +33,7 @@
             android:fontFamily="@font/inter_medium"
             android:minWidth="0dp"
             android:stateListAnimator="@null"
-            android:text="School"
+            android:text="Academic"
             android:textAllCaps="false"
             android:textColor="?attr/colorOnBackground"
             android:textSize="12sp"
@@ -77,7 +77,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_event_cat_header" />
 
         <Button
-            android:id="@+id/btn_event_edit"
+            android:id="@+id/eventEdit"
             android:layout_width="125dp"
             android:layout_height="50dp"
             android:layout_marginStart="153dp"
