--- a/app/src/main/res/layout/each_task.xml
+++ b/app/src/main/res/layout/each_task.xml
@@ -19,7 +19,7 @@
             <com.google.android.material.checkbox.MaterialCheckBox
                 android:id="@+id/mCheckBox"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:buttonTint="@color/light_accent"
                 android:paddingStart="10dp"
                 android:text="This is task 1"
